# discord2se

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: checks.yml
app/: client.py  stackoverflow.py
