[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idris2se"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "discord.py==2.1.0",
    "requests~=2.28",
]

[project.optional-dependencies]
dev = [
    "mypy==0.991",
    "flake8~=6.0",
    "types-requests~=2.28",
]

[tool.mypy]
disallow_untyped_defs = true
disallow_any_explicit = true

[tool.flake8]
max-line-length = 100
